--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,19 +2,35 @@
 # https://symfony.com/doc/current/security.html
 security:
 
+    encoders:   
+        AppBundle\Entity\usuario: bcrypt
+
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        in_memory:
-            memory: ~
+        usuarios_bd:
+            entity:
+                class: AppBundle:usuario
+                property: username
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
+        
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        main:
+        usuarios:
+            pattern: ^/
             anonymous: ~
+            provider: usuarios_bd
+            form_login:
+                login_path: /login
+                check_path: /login
+                default_target_path: /pelicula
+
+            logout:
+                path: /logout
+                target: /
             # activate different ways to authenticate
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
