--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@symfony/webpack-encore": "^0.22.1",
+    "vue": "^2.5.17",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.17"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev-server": "encore dev-server",
+    "dev": "encore dev",
+    "watch": "encore dev  --watch",
+    "build": "encore production"
   },
   "repository": {
     "type": "git",
